# GMI_experiment

./: .gitignore  README.md  Tp8_PnP.ipynb  experiments.ipynb  pyproject.toml  requirement.txt
convex_ridge_regularizers/: __init__.py
convex_ridge_regularizers/inverse_problems/: __init__.py
convex_ridge_regularizers/models/: multi_conv.py
convex_ridge_regularizers/tutorial/: howto.ipynb
tp_models/: __init__.py  blurring.py  denoiser.py  kernel.py  main.py  prox_operator.py  utils.py  utils_tp.py  visualization.py
